--- a/webapp/modules/base/base.html
+++ b/webapp/modules/base/base.html
@@ -8,7 +8,7 @@
 </header>
 <nav>
     <div class="nav-content">
-        <span class="nav-item" ng-repeat="item in vm.navList" ng-class="{'active':item.active}" ng-click="vm.changeNavigation(item, $index)">
+        <span class="nav-item" ng-repeat="item in vm.navList" ng-class="{'active':item.active}" ng-click="vm.changeNavigation(item, $index)" ng-hide="item.hide">
         {{item.title}}
         </span>
     </div>
