--- a/webapp/modules/mentee/workbook/workbook.html
+++ b/webapp/modules/mentee/workbook/workbook.html
@@ -249,8 +249,104 @@
                     <button ng-show="vm.stagesList.stage2.rights.mentee.readOnly == 1 && vm.stagesList.stage2.rights.mentor.readOnly == 0" type="submit" class="btn btn-primary">Under Review</button>
                 </div>
             </div>
-            <div ng-show="vm.stageVisibility.stage3">3</div>
-            <div ng-show="vm.stageVisibility.stage4">4</div>
+
+            <div ng-show="vm.stageVisibility.stage3">
+                <div class="text-right">
+                    <button class="btn btn-danger" ng-click="vm.addGoal();" ng-hide="vm.stagesList.stage1.rights.mentor.readOnly">Add</button>
+                    <div class="table-responsive">
+                        <table class="table table-striped">
+                            <thead>
+                                <tr>
+                                    <th>Competency (specific topic area for your learning)</th>
+                                    <th>Learning goal</th>
+                                    <th>Resources needed to achieve goals</th>
+                                    <th>Review date</th>
+                                    <th>Due date</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr ng-repeat="item in vm.stagesList.stage3.items">
+                                    <td><select ng-model="item.term" ng-disabled="vm.stagesList.stage3.rights.mentee.readOnly">
+                                    <option value="Short term (3 months)">Short term (3 months)</option>
+                                    <option value="Intermediate (6 months)">Intermediate (6 months)</option>
+                                    <option value="Long term (1 year)">Long term (1 year)</option>
+                                    </select></td>
+                                    <td><input ng-readonly="vm.stagesList.stage3.rights.mentee.readOnly" type="text" ng-model="item.goal" /></td>
+                                    <td><input ng-readonly="vm.stagesList.stage3.rights.mentee.readOnly" type="text" ng-model="item.resource" /></td>
+                                    <td><input ng-readonly="vm.stagesList.stage3.rights.mentee.readOnly" type="text" ng-model="item.review_date" /></td>
+                                    <td><input ng-readonly="vm.stagesList.stage3.rights.mentee.readOnly" type="text" ng-model="item.due_date" /></td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    <button ng-show="!vm.stagesList.stage3.rights.mentee.readOnly" type="submit" class="btn btn-primary" ng-click="vm.saveStage(3);">Submit</button>
+                    <button ng-show="vm.stagesList.stage3.rights.mentee.readOnly == 1 && vm.stagesList.stage3.rights.mentor.readOnly == 1" type="submit" class="btn btn-primary" ng-click="vm.nextStage()">Next</button>
+                    <button ng-show="vm.stagesList.stage3.rights.mentee.readOnly == 1 && vm.stagesList.stage3.rights.mentor.readOnly == 0" type="submit" class="btn btn-primary">Under Review</button>
+                </div>
+            </div>
+
+            <div ng-show="vm.stageVisibility.stage4">
+                <div class="text-right">
+                    <button class="btn btn-danger" ng-click="vm.addSummary();" ng-hide="vm.stagesList.stage4.rights.mentor.readOnly">Add</button>
+                </div>
+                <div ng-repeat="item in vm.stagesList.stage4.items">
+                    <div class="row">
+                        <div class="col-4">Evidence title</div>
+                        <div class="col-8"><input type="text" ng-model="item.title" /></div>
+                    </div>
+                    <div class="row">
+                        <div class="col-4">Date completed</div>
+                        <div class="col-8"><input type="text" ng-model="item.date_completed" /></div>
+                    </div>
+                    <div class="row">
+                        <div class="col-4">Evidence category</div>
+                        <div class="col-8">
+                            <select ng-model="item.evidence_category">
+                                <option value="Clinical">Clinical</option>
+                                <option value="Education">Education</option>
+                                <option value="Leadership">Leadership</option>
+                                <option value="Policy">Policy</option>
+                                <option value="Research">Research</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col"><b>Continuing Professional Development (CPD) points/ hrs</b> associated with this evidence</div>
+                    </div>
+                    <div class="row">
+                        <div class="col-4"><b>Knowledge</b> (Provide a narrative of your evidence and experience gained)</div>
+                        <div class="col-8"><input type="text" ng-model="item.knowledge" /></div>
+                    </div>
+                    <div class="row">
+                        <div class="col-4"><b>Skills</b> (Document the skills you gained through this experience)</div>
+                        <div class="col-8"><input type="text" ng-model="item.skills" /></div>
+                    </div>
+                    <div class="row">
+                        <div class="col-4"><b>Attitudes</b> (Have your attitudes changed as a result of this experience?)</div>
+                        <div class="col-8"><input type="text" ng-model="item.attitude" /></div>
+                    </div>
+                    <div class="row">
+                        <div class="col-4"><b>Competencies
+and domains of
+practice</b> (Highlight competencies relevant for this piece of evidence)</div>
+                        <div class="col-8">
+                            <div ng-repeat="com in item.competency">
+                                <input type="checkbox" ng-model="com.checked" /> {{com.text}}
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-4">Notify mentor (date)</div>
+                        <div class="col-8"><input type="text" ng-model="item.mentor_notify_date" /></div>
+                    </div>
+                </div>
+                <div class="text-right">
+                    <button ng-show="!vm.stagesList.stage4.rights.mentee.readOnly" type="submit" class="btn btn-primary" ng-click="vm.saveStage(4);">Submit</button>
+                    <button ng-show="vm.stagesList.stage4.rights.mentee.readOnly == 1 && vm.stagesList.stage4.rights.mentor.readOnly == 1" type="submit" class="btn btn-primary" ng-click="vm.nextStage()">Next</button>
+                    <button ng-show="vm.stagesList.stage4.rights.mentee.readOnly == 1 && vm.stagesList.stage4.rights.mentor.readOnly == 0" type="submit" class="btn btn-primary">Under Review</button>
+                </div>
+            </div>
+
             <div ng-show="vm.stageVisibility.stage5">5</div>
         </form>
 
