--- a/webapp/modules/mentee/workbook/workbook.html
+++ b/webapp/modules/mentee/workbook/workbook.html
@@ -326,9 +326,7 @@
                         <div class="col-8"><input type="text" ng-model="item.attitude" /></div>
                     </div>
                     <div class="row">
-                        <div class="col-4"><b>Competencies
-and domains of
-practice</b> (Highlight competencies relevant for this piece of evidence)</div>
+                        <div class="col-4"><b>Competencies and domains of practice</b> (Highlight competencies relevant for this piece of evidence)</div>
                         <div class="col-8">
                             <div ng-repeat="com in item.competency">
                                 <input type="checkbox" ng-model="com.checked" /> {{com.text}}
