--- a/webapp/modules/mentee/mentee.html
+++ b/webapp/modules/mentee/mentee.html
@@ -7,13 +7,13 @@
         <div class="mt-4">
             <div class="clearfix">
                 <div class="pull-left">Your Progress</div>
-                <div class="pull-right">Stage 1/6</div>
+                <div class="pull-right">Stage {{vm.user.gst}}/5</div>
             </div>
             <div class="progress">
-                <div class="progress-bar bg-success" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar bg-success" role="progressbar" style="width: 25%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
         </div>
-        <div class="comments">
+       <!-- <div class="comments">
             <hr/>
             <span style="font-weight: normal;font-size: 1em;">Recent Supervisor Messages</span>
             <div class="comment-container">
@@ -37,7 +37,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div>-->
     </div>
 </div>
 <!-- /.MultiStep Form -->
