--- a/webapp/modules/mentee/workbook/workbook.html
+++ b/webapp/modules/mentee/workbook/workbook.html
@@ -292,16 +292,16 @@
                 <div ng-repeat="item in vm.stagesList.stage4.items">
                     <div class="row">
                         <div class="col-4">Evidence title</div>
-                        <div class="col-8"><input type="text" ng-model="item.title" /></div>
+                        <div class="col-8"><input ng-readonly="vm.stagesList.stage4.rights.mentee.readOnly" type="text" ng-model="item.title" /></div>
                     </div>
                     <div class="row">
                         <div class="col-4">Date completed</div>
-                        <div class="col-8"><input type="text" ng-model="item.date_completed" /></div>
+                        <div class="col-8"><input ng-readonly="vm.stagesList.stage4.rights.mentee.readOnly" type="text" ng-model="item.date_completed" /></div>
                     </div>
                     <div class="row">
                         <div class="col-4">Evidence category</div>
                         <div class="col-8">
-                            <select ng-model="item.evidence_category">
+                            <select ng-readonly="vm.stagesList.stage4.rights.mentee.readOnly" ng-disabled="vm.stagesList.stage4.rights.mentee.readOnly" ng-model="item.evidence_category">
                                 <option value="Clinical">Clinical</option>
                                 <option value="Education">Education</option>
                                 <option value="Leadership">Leadership</option>
@@ -315,28 +315,29 @@
                     </div>
                     <div class="row">
                         <div class="col-4"><b>Knowledge</b> (Provide a narrative of your evidence and experience gained)</div>
-                        <div class="col-8"><input type="text" ng-model="item.knowledge" /></div>
+                        <div class="col-8"><input ng-readonly="vm.stagesList.stage4.rights.mentee.readOnly" type="text" ng-model="item.knowledge" /></div>
                     </div>
                     <div class="row">
                         <div class="col-4"><b>Skills</b> (Document the skills you gained through this experience)</div>
-                        <div class="col-8"><input type="text" ng-model="item.skills" /></div>
+                        <div class="col-8"><input ng-readonly="vm.stagesList.stage4.rights.mentee.readOnly" type="text" ng-model="item.skills" /></div>
                     </div>
                     <div class="row">
                         <div class="col-4"><b>Attitudes</b> (Have your attitudes changed as a result of this experience?)</div>
-                        <div class="col-8"><input type="text" ng-model="item.attitude" /></div>
+                        <div class="col-8"><input ng-readonly="vm.stagesList.stage4.rights.mentee.readOnly" type="text" ng-model="item.attitude" /></div>
                     </div>
                     <div class="row">
                         <div class="col-4"><b>Competencies and domains of practice</b> (Highlight competencies relevant for this piece of evidence)</div>
                         <div class="col-8">
                             <div ng-repeat="com in item.competency">
-                                <input type="checkbox" ng-model="com.checked" /> {{com.text}}
+                                <input ng-readonly="vm.stagesList.stage4.rights.mentee.readOnly" ng-disabled="vm.stagesList.stage4.rights.mentee.readOnly" type="checkbox" ng-model="com.checked" /> {{com.text}}
                             </div>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-4">Notify mentor (date)</div>
-                        <div class="col-8"><input type="text" ng-model="item.mentor_notify_date" /></div>
+                        <div class="col-8"><input ng-readonly="vm.stagesList.stage4.rights.mentee.readOnly" type="text" ng-model="item.mentor_notify_date" /></div>
                     </div>
+                    <div class="mb-4"><hr></div>
                 </div>
                 <div class="text-right">
                     <button ng-show="!vm.stagesList.stage4.rights.mentee.readOnly" type="submit" class="btn btn-primary" ng-click="vm.saveStage(4);">Submit</button>
@@ -345,7 +346,45 @@
                 </div>
             </div>
 
-            <div ng-show="vm.stageVisibility.stage5">5</div>
+            <div ng-show="vm.stageVisibility.stage5">
+                <div class="row form-group align-items-center">
+                    <div class="col">Mentee Name</div>
+                    <div class="col"><input ng-readonly="vm.stagesList.stage5.rights.mentee.readOnly" class="form-control" type="text" ng-model="vm.stagesList.stage5.mentee.mentee_name" disabled/></div>
+                </div>
+                <div class="row form-group align-items-center">
+                    <div class="col">Mentee Role</div>
+                    <div class="col"><input ng-readonly="vm.stagesList.stage5.rights.mentee.readOnly" class="form-control" type="text" ng-model="vm.stagesList.stage5.mentee.mentee_role"/></div>
+                </div>
+                <div class="row form-group align-items-center">
+                    <div class="col">Mentor Name</div>
+                    <div class="col"><input ng-readonly="vm.stagesList.stage5.rights.mentee.readOnly" class="form-control" type="text" ng-model="vm.stagesList.stage5.mentee.mentor_name"/></div>
+                </div>
+                <div class="row form-group align-items-center">
+                    <div class="col">Mentor Role</div>
+                    <div class="col"><input ng-readonly="vm.stagesList.stage5.rights.mentee.readOnly" class="form-control" type="text" ng-model="vm.stagesList.stage5.mentee.mentor_role"/></div>
+                </div>
+                <div class="row form-group align-items-center">
+                    <div class="col">Additional Comments</div>
+                    <div class="col"><textarea ng-readonly="vm.stagesList.stage5.rights.mentee.readOnly" class="form-control" type="text" ng-model="vm.stagesList.stage5.mentee.comments"></textarea></div>
+                </div>
+                <div class="row form-group align-items-center" ng-repeat="item in vm.stagesList.stage5.mentee.questions">
+                    <div class="col">{{item.text}}</div>
+                    <div class="col">
+                        <select class="form-control" ng-readonly="vm.stagesList.stage5.rights.mentee.readOnly"  ng-disabled="vm.stagesList.stage5.rights.mentee.readOnly" ng-model="item.answer">
+                            <option value="" readonly disabled selected>-- select --</option>
+                            <option value="Strongly Disagree">Strongly Disagree</option>
+                            <option value="Disagree">Disagree</option>
+                            <option value="Neutral">Neutral</option>
+                            <option value="Agree">Agree</option>
+                            <option value="Strongly Agree">Strongly Agree</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="text-right">
+                    <button ng-show="!vm.stagesList.stage5.rights.mentee.readOnly" type="submit" class="btn btn-primary" ng-click="vm.saveStage(5);">Submit</button>
+                    <button ng-show="vm.stagesList.stage5.rights.mentee.readOnly == 1 && vm.stagesList.stage5.rights.mentor.readOnly == 1" type="submit" class="btn btn-primary">Done All</button>
+                </div>
+            </div>
         </form>
 
     </div>
