--- a/webapp/modules/mentor/mentor.html
+++ b/webapp/modules/mentor/mentor.html
@@ -13,7 +13,7 @@
             </div>
             <div class="col">
                 <div class="info-container">
-                    <h3>0</h3>
+                    <h3>{{vm.mentorInfo.needsAttention}}</h3>
                     <small>Stage Approvals Pending</small>
                 </div>
             </div>
