--- a/webapp/modules/mentor/workbook/workbook.html
+++ b/webapp/modules/mentor/workbook/workbook.html
@@ -247,6 +247,7 @@
                     <button ng-show="vm.stagesList.stage2.rights.mentee.readOnly == 1 && vm.stagesList.stage2.rights.mentor.readOnly == 1" type="submit" class="btn btn-primary" ng-click="vm.nextStage()">Next</button>
                 </div>
             </div>
+
             <div ng-show="vm.stageVisibility.stage3">
                 <div class="text-right">
                     <div class="table-responsive">
@@ -281,7 +282,66 @@
                     <button ng-show="vm.stagesList.stage3.rights.mentee.readOnly == 1 && vm.stagesList.stage3.rights.mentor.readOnly == 1" type="submit" class="btn btn-primary" ng-click="vm.nextStage()">Next</button>
                 </div>
             </div>
-            <div ng-show="vm.stageVisibility.stage4">4</div>
+
+            <div ng-show="vm.stageVisibility.stage4">
+                <div ng-repeat="item in vm.stagesList.stage4.items">
+                    <div class="row">
+                        <div class="col-4">Evidence title</div>
+                        <div class="col-8"><input readonly disabled type="text" ng-model="item.title" /></div>
+                    </div>
+                    <div class="row">
+                        <div class="col-4">Date completed</div>
+                        <div class="col-8"><input readonly disabled type="text" ng-model="item.date_completed" /></div>
+                    </div>
+                    <div class="row">
+                        <div class="col-4">Evidence category</div>
+                        <div class="col-8">
+                            <select readonly disabled ng-disabled="vm.stagesList.stage4.rights.mentee.readOnly" ng-model="item.evidence_category">
+                                <option value="Clinical">Clinical</option>
+                                <option value="Education">Education</option>
+                                <option value="Leadership">Leadership</option>
+                                <option value="Policy">Policy</option>
+                                <option value="Research">Research</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col"><b>Continuing Professional Development (CPD) points/ hrs</b> associated with this evidence</div>
+                    </div>
+                    <div class="row">
+                        <div class="col-4"><b>Knowledge</b> (Provide a narrative of your evidence and experience gained)</div>
+                        <div class="col-8"><input readonly disabled type="text" ng-model="item.knowledge" /></div>
+                    </div>
+                    <div class="row"> 
+                        <div class="col-4"><b>Skills</b> (Document the skills you gained through this experience)</div>
+                        <div class="col-8"><input readonly disabled type="text" ng-model="item.skills" /></div>
+                    </div>
+                    <div class="row">
+                        <div class="col-4"><b>Attitudes</b> (Have your attitudes changed as a result of this experience?)</div>
+                        <div class="col-8"><input readonly disabled type="text" ng-model="item.attitude" /></div>
+                    </div>
+                    <div class="row">
+                        <div class="col-4"><b>Competencies and domains of practice</b> (Highlight competencies relevant for this piece of evidence)</div>
+                        <div class="col-8">
+                            <div ng-repeat="com in item.competency">
+                                <input readonly disabled ng-disabled="vm.stagesList.stage4.rights.mentee.readOnly" type="checkbox" ng-model="com.checked" /> {{com.text}}
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-4">Notify mentor (date)</div>
+                        <div class="col-8"><input readonly disabled type="text" ng-model="item.mentor_notify_date" /></div>
+                    </div>
+                    <div class="mb-4">
+                        <hr>
+                    </div>
+                </div>
+                <div class="text-right">
+                    <button ng-if="vm.stagesList.stage4.rights.mentor.readOnly == 0 && vm.stagesList.stage4.rights.mentee.readOnly == 1" type="submit" class="btn btn-primary" ng-click="vm.saveStage(4);">Approve</button>
+                    <button ng-show="vm.stagesList.stage4.rights.mentee.readOnly == 1 && vm.stagesList.stage4.rights.mentor.readOnly == 1" type="submit" class="btn btn-primary" ng-click="vm.nextStage()">Next</button>
+                </div>
+            </div>
+
             <div ng-show="vm.stageVisibility.stage5">5</div>
         </form>
 
